css/gui.css
/* GUI */
.gui{
    display: none;
    position: absolute;
    height: 100%;
    width: 100%;
    z-index: 0; /* Generates stacking context for GUI*/
}
.gui .gui-element{
    display: none;
    position: absolute;
}

.gui .fullscreen-toggle {
    right: 1vmin;
    top: 1vmin;
}

.gui .fullscreen-toggle:hover {
    cursor: pointer;
}

.gui .fullscreen-toggle #fullscreen-toggle-off,
.gui .fullscreen-toggle #fullscreen-toggle-on {
    display: none;
    width: 4.5vmin;
    height: 4.5vmin;
}

.gui .shield-bar-parent,
.gui .health-bar-parent,
.gui .ram-bar-parent {
    box-sizing: border-box;
    display: inline-block;
    bottom: 2.5vh;
    width: 33vw;
    height: 2.5vh;
    left: 50%;
    transform: translateX(-50%);
    background-color: rgba(0, 0, 0, 0.25);
    border: solid 1px #ffffff;
}

.gui .shield-bar-parent {
    bottom: 5.5vh;
}

.gui .ram-bar-parent {
    height: 1vmin;
    bottom: 1vmin;
}

.gui .shield-bar,
.gui .health-bar,
.gui .ram-bar {
    height: 100%;
}

.gui .health-bar {
    background-color: red;
}

.gui .shield-bar {
    background-color: #0095d8;
}

.gui .ram-bar {
    background-color: #ffc107;
}

.gui .ammo-display-container {
    bottom: 2.5vmin;
    right: 2.5vmin;
    height: 10vmin;
    width: 10vmin;
}

.gui .ammo-count {
    font-size: 5vmin;
    position: absolute;
    color: #ffffff;
    text-align: center;
    width: 100%;
    text-align: center;
    line-height: 10vmin;
    vertical-align: center;
}

.gui .ammo-display-container svg {
    transform: rotate(-90deg);
}

.gui .killfeed-container {
    width: 25vw;
    max-height: 25vh;
    right: 2.5vmin;
    top: 5.5vmin;
    color:  #ffffff;
    font-size: 2vmin;
    text-align: right;
    white-space: nowrap;
    overflow: hidden;
}

.gui .killfeed-message {
    height: 2.5vh;
    font-family: 'Inconsolata', sans-serif;
    font-weight: bold;
    transition: opacity 0.5s ease;
}

.gui .chat-container,
.gui .chat-preview-container {
    z-index: 1;
    width: 25vw;
    bottom: 2.5vmin;
    left: 2.5vmin;
    color: #ffffff;
    font-size: 2vmin;
    font-family: 'Inconsolata', sans-serif;
}

.gui .chat-container {
    flex-direction: column;
}
.gui .chat-preview-container {
    bottom: calc(2.5vmin + 2.5vh);
}

.gui .chat-message {
    transition: opacity 0.5s ease;
}

.gui .chat-container .chat-input {
    width: 100%;
    background: none;
    border: none;
    padding: 0;
    border-bottom: solid 1px #ffffff;
    outline: none;
    color: #ffffff;
    height: 2.5vh;
    font-size: 2vh;
    box-sizing: border-box;
    font-family: 'Inconsolata', sans-serif;
}

.gui .joystick-container {
    bottom: 0;
    height: 25vmin;
    width: 25vmin;
    position: absolute;
}

